--- a/proposal.html
+++ b/proposal.html
@@ -1,61 +1,82 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <title>{{Title}}</title>
+
   <style>
-    body {
-      font-family: "Georgia", serif;
-      font-size: 12pt;
-      line-height: 1.6;
-      margin: 1.2in;
-      color: #000;
+    /* Apply to every printed page */
+    @page {
+      margin: 0.75in;
     }
+
+    /* Base styles */
+    body {
+      font-family: Arial, sans-serif;
+      font-size: 11pt;
+      line-height: 1.5;
+      margin: 0;
+      padding: 0;
+    }
+
     h1 {
-      font-size: 22pt;
+      font-size: 25pt;
       text-align: center;
       margin-bottom: 20px;
     }
+
     h2 {
-      font-size: 16pt;
+      font-size: 13pt;
       margin-top: 40px;
       margin-bottom: 10px;
-      border-bottom: 1px solid #000;
+      border-bottom: 1px solid #ccc;
       padding-bottom: 4px;
+      page-break-before: always;
     }
-    p {
-      margin: 12px 0;
+
+    p, li {
+      font-size: 11pt;
+      line-height: 1.5;
+      margin: 8px 0;
     }
+
     ul, ol {
-      margin: 0 0 1em 1.5em;
+      page-break-inside: avoid;
+      margin-left: 1.5em;
     }
-    li {
-      margin-bottom: 6px;
-    }
+
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 20px;
-      margin-bottom: 20px;
+      margin: 20px 0;
+      page-break-inside: auto;
     }
+
     th, td {
-      border: 1px solid #aaa;
+      border: 1px solid #000000;
       padding: 8px;
       vertical-align: top;
     }
+
     th {
-      background: #f2f2f2;
+      background-color: #ffffff;
     }
+
+    tr {
+      page-break-inside: avoid;
+    }
+
     .meta {
-      font-size: 11pt;
       margin-bottom: 30px;
     }
+
     .meta p {
-      margin: 0;
+      margin: 4px 0;
     }
   </style>
 </head>
 <body>
+
 
   <h1>{{Title}}</h1>
 
